--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nlw-valoriza",
   "version": "1.0.0",
-  "description": "",
+  "description": "Repo criado para colocar os estudos na prática",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["NodeJs", "Typescript", "NLW"],
+  "author": "Luis Guilherme(Shadow)",
   "license": "ISC"
 }
