--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["NodeJs", "Typescript", "NLW"],
+  "keywords": [
+    "NodeJs",
+    "Typescript",
+    "NLW"
+  ],
   "author": "Luis Guilherme(Shadow)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^4.3.4"
+  }
 }
