--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repo criado para colocar os estudos na prática",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/server.ts"
+    "start": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "keywords": [
     "NodeJs",
